word wrap, mobile fix for logo

--- a/css/entra-0-global.css
+++ b/css/entra-0-global.css
@@ -6,7 +6,6 @@ html, body {
 }
 
 
-
 body:before {
   content: "";
   display: block;
@@ -15,6 +14,7 @@ body:before {
   top: 0;
   width: 100%;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   z-index: -10;
   background: url(../images/greenpoint-boardwalk-iris.jpg) no-repeat center center;
   -webkit-background-size: cover;
@@ -23,7 +23,6 @@ body:before {
   background-size: cover;  
 }
 
-
 .entra-logo {
   position: fixed;
   top: 50%;
@@ -31,6 +30,16 @@ body:before {
   -webkit-transform: translate(-50%,-50%);
   transform: translate(-50%,-50%);
  /* z-index: -1; */
+}
+
+
+.entra-logo {
+  top: calc(var(--vh, 1vh) * 50);
+  /*
+  -webkit-transform: translate(-50%,calc(var(--vh, 1vh) * -50));
+  transform: translate(-50%,calc(var(--vh, 1vh) * -50));
+  text-shadow: 0px 0px 6px rgba(0,0,0,1);
+  */
 }
 
 header {
@@ -86,6 +95,7 @@ section a:hover {
 section span{
   float: left;
   word-wrap: unset;
+  word-break: break-word;
 }
 section .item {
 }
